<resources>
    <string name="app_name">IngeMath</string>
    <string name="title_activity_referencia">Referencia</string>
    <string name="hint_usuario">Usuario</string>
    <string name="hint_contrasena">Contraseña</string>
    <string name="button_ingresar">Ingresar</string>
    <string name="button_registrarse">Registrarse</string>
    <string name="permanecerConectado">Permanecer Conectado</string>
    <string name="olvido_contraseña">¿Olvidaste contraseña?</string>
    <string name="hint_documento_usuario">Nro Documento</string>
    <string name="hint_tipo_documento_usuario">Tipo de Documento</string>
    <string name="hint_nombres_cliente">Nombres</string>
    <string name="hint_documento_apellidos">Apellidos</string>
    <string name="hint_grupo_sanguineo">Grupo sanguíneo</string>
    <string name="hint_telefono_cliente">Teléfono</string>
    <string name="hint_direccion_cliente">Dirección</string>
    <string name="hint_nombre_contacto">Nombre contacto</string>
    <string name="hint_correo_cliente">Email</string>
    <string name="hint_contrasena_cliente">Contraseña</string>
    <string name="hint_confirmar_contrasena">Confirmar contraseña</string>
    <string name="button_cancelar">Cancelar</string>
    <string name="toolbar_titulo">BiciQR</string>
    <string name="hint_telefono_contacto">Teléfono Contacto</string>
    <string name="fecha_nacimiento">Fecha Nacimiento</string>
    <string name="hint_fecha_nacimiento">Fecha de Nacimiento</string>
    <string name="hint_nombre_eps">EPS</string>
    <string name="hint_eps">Nombre EPS</string>
    <string name="condiciones_formulario">He leído y acepto los términos y condiciones</string>
    <string name="hint_departamento">Departamento</string>
    <string name="hint_ciudad">Ciudad</string>
    <string name="hint_genero">Género</string>
    <string name="sgernerar_qr">Generar QR</string>
    <string name="btn_regresar_generarCodigoQR">Regresar</string>
    <string name="btn_generarCodigoQR">Generar QR</string>
    <string name="btn_descargarCodigoQR">Descargar QR</string>
    <string name="formulario_actualizacion_perfil">Actualización de datos</string>
    <string name="button_ActualizarPerfil">Actualizar</string>
    <string name="recuperar_contrasena">Recuperar Contraseña</string>
    <string name="username">Correo electrónico</string>
    <string name="ok">Enviar</string>
    <string name="cancel">Cancelar</string>
    <string name="title_activity_content_referen">ContentReferen</string>
</resources>
