<?xml version="1.0" encoding="utf-8"?>

<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".vista.CrearCuenta">



<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/padding_margen_sesionIniciada"
        android:background="@color/colorPrimaryDark"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/margen_formmulario_interno"
            android:background="@color/transparencia"
            android:orientation="vertical"
            >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Inscripción"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorTextWhile"
                android:layout_marginTop="15dp"/>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_redondeado_registro"
                android:layout_marginTop="34dp">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/nombresCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nombres_cliente"
                    android:theme="@style/EditTextRegistro"
                    android:background="@drawable/btn_redondeado_registro" />
            </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="34dp"
                    android:layout_marginTop="@dimen/margen_campos_registros"
                    android:background="@drawable/btn_redondeado_registro">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/btn_redondeado_registro"
                        android:textColor="@color/colorGris"
                        android:textSize="12sp"
                        android:text="@string/hint_genero"
                        />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal">

                        <Spinner
                            android:id="@+id/genero"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">
                        </Spinner>
                    </LinearLayout>
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/btn_redondeado_registro"
                    android:layout_marginTop="@dimen/margen_campos_registros">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/fechaNacimiento"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_fecha_nacimiento"
                        android:theme="@style/EditTextRegistro"
                        android:background="@drawable/btn_redondeado_registro"
                        android:inputType="date"
                        android:focusable="false"/>
                </android.support.design.widget.TextInputLayout>



            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_redondeado_registro"
                android:layout_marginTop="@dimen/margen_campos_registros">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/telefonoCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_telefono_cliente"
                    android:theme="@style/EditTextRegistro"
                    android:background="@drawable/btn_redondeado_registro"
                    android:inputType="phone"/>
            </android.support.design.widget.TextInputLayout>


            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_redondeado_registro"
                android:layout_marginTop="@dimen/margen_campos_registros">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/correoCliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_correo_cliente"
                    android:theme="@style/EditTextRegistro"
                    android:background="@drawable/btn_redondeado_registro"
                    android:inputType="textEmailAddress"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_redondeado_registro"
                android:layout_marginTop="@dimen/margen_campos_registros">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/contrasena1Cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_contrasena_cliente"
                    android:theme="@style/EditTextRegistro"
                    android:inputType="textPassword"
                    android:background="@drawable/btn_redondeado_registro"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/btn_redondeado_registro"
                android:layout_marginTop="@dimen/margen_campos_registros">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/contrasena2Cliente"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_confirmar_contrasena"
                    android:theme="@style/EditTextRegistro"
                    android:inputType="textPassword"
                    android:background="@drawable/btn_redondeado_registro"/>
            </android.support.design.widget.TextInputLayout>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:gravity="center">

                <CheckBox
                    android:id="@+id/checkboxCondicionesRegistro"
                    android:layout_width="25dp"
                    android:layout_height="25dp"
                    android:theme="@style/AppTheme" />

                <TextView
                    android:id="@+id/textCondicionesRegistro"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="4dp"
                    android:gravity="bottom"
                    android:layout_toRightOf="@id/checkboxCondicionesRegistro"
                    android:text="@string/condiciones_formulario"
                    android:textSize="@dimen/edittext_terminos_registro" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margen_campos_registros"
                android:gravity="center">

                <Button
                    android:id="@+id/cancelarIncripcion"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_cancelar"
                    android:theme="@style/RaisedButtonRegistro"
                    android:layout_marginRight="@dimen/espacio_botones"
                    android:textSize="@dimen/edittext_textsize_login"/>


                <Button
                    android:id="@+id/registrarseFormularioIncripcion"
                    android:layout_width="140dp"
                    android:layout_height="wrap_content"
                    android:text="@string/button_registrarse"
                    android:theme="@style/RaisedButtonIngreso"
                    android:layout_toRightOf="@id/cancelarIncripcion"
                    android:textSize="@dimen/edittext_textsize_login"/>
            </RelativeLayout>
        </LinearLayout>



    </LinearLayout>

</ScrollView>

</android.support.design.widget.CoordinatorLayout>